# pycommon

./: LICENSE.txt  README.md  pyproject.toml
src/pycommon/: __init__.py
