[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycommon"
dynamic = ["version"]
description = 'Commonly useful modules of mine'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jesse", email = "dev@jesseconis.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jesse/pycommon#readme"
Issues = "https://github.com/Jesse/pycommon/issues"
Source = "https://github.com/Jesse/pycommon"

[tool.hatch.version]
path = "src/pycommon/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pycommon tests}"

[tool.coverage.run]
source_pkgs = ["pycommon", "tests"]
branch = true
parallel = true
omit = [
  "src/pycommon/__about__.py",
]

[tool.coverage.paths]
pycommon = ["src/pycommon", "*/pycommon/src/pycommon"]
tests = ["tests", "*/pycommon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
